# aws_nitro_tls

./: Cargo.toml  README.md
.cargo/: config.toml
aws_nitro_tls/: Cargo.toml
aws_nitro_tls/src/: attestation.rs  certgen.rs  client.rs  constants.rs  error.rs  lib.rs  nsm.rs  nsm_fake.rs  server.rs  util.rs  verifier.rs
enclave_server/: Cargo.toml  README.md
enclave_server/src/: aws_nitro_tls_util.rs  certificates.rs  error.rs  main.rs  proxy.rs  proxy_service.rs  socket.rs  tls_service.rs  to_refactor.rs
example_client/: Cargo.toml
example_client/certs/: README.md  cert.pem  key.pem
example_client/src/: main.rs
example_server/: Cargo.toml
example_server/src/: main.rs
src/: client.rs  lib.rs  verifier.rs
