[package]
name = "aws_nitro_tls"
version = "0.1.0"
edition = "2021"

[dependencies.aws-nitro-enclaves-attestation]
git = "https://github.com/kgraney/aws-nitro-enclaves-attestation"
branch = "make_pub"

[dependencies]
aws-nitro-enclaves-nsm-api = "0.2.1"
http = "0.2"
hyper-openssl = "0.9.2"
hyper = { version = "0.14", features = ["full"] }
openssl = "0.10.45"
rcgen = "0.10.0"
serde = "1.0.152"
serde_bytes = "0.11.7"
serde_cbor = "0.11.2"
serde_derive = "1.0.152"
thiserror = "1.0.38"
tracing = "0.1"
tracing-subscriber = "0.3"
