[package]
name = "enclave_server"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "^1.23"
features = ["full", "tracing"]

[dependencies]
aws_nitro_tls = { path = "../aws_nitro_tls" }
bytes = "1.3.0"
clap = {version = "4.0.32", features = ["derive"]}
console-subscriber = "0.1.8"
futures = "0.3.25"
http-body-util = "0.1.0-rc.2"
hyper-reverse-proxy = "0.5.1"
hyper = {version = "1.0.0-rc.2", features = ["full"]}
openssl = "0.10.45"
thiserror = "1.0.38"
tokio-console = "0.1.7"
tokio-openssl = "0.6.3"
tokio-vsock = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3.1"
