[package]
name = "example_client"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_nitro_tls = { path = "../aws_nitro_tls" }
clap = {version = "4.0.32", features = ["derive"]}
env_logger = "0.7"
futures = "0.3.25"
http = "0.2"
hyper-openssl = "0.9.2"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
openssl = "0.10.45"
openssl-probe = "0.1.5"
tokio = { version = "1", features = ["full"] }
