[package]
name = "example_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = {version = "4", features = ["openssl"]}
aws_nitro_tls = { path = "../aws_nitro_tls" }
clap = {version = "4.0.32", features = ["derive"]}
env_logger = "0.7"
futures = "0.3.25"
log = "0.4"
openssl = "0.10.45"
