[package]
name = "example_server"
version = "0.1.0"
edition = "2021"

[dependencies.third-wheel]
git = "https://github.com/kgraney/third-wheel"
branch = "attestation_support"

[dependencies.tokio]
version = "^1.23"
#features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync", "tracing"]
features = ["full", "tracing"]

[dependencies]
actix-rt = "2.7.0"
actix-web = {version = "4", features = ["openssl"]}
awc = "3.0.1"
aws_nitro_tls = { path = "../aws_nitro_tls" }
clap = {version = "4.0.32", features = ["derive"]}
console-subscriber = "0.1.8"
futures = "0.3.25"
hyper = "0.14.23"
hyper-reverse-proxy = "0.5.1"
openssl = "0.10.45"
thiserror = "1.0.38"
tokio-console = "0.1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3.1"
